Ticket #1593 (closed defect: fixed)

Opened 3 months ago

Last modified 2 months ago

VLC video output crash

Reported by: courmisch Assigned to: courmisch
Priority: normal Milestone: 0.9.0-test1
Component: Video output core Version: master
Severity: major Keywords:
Cc: Platform(s): Linux
Difficulty: unknown Work status: Not started

Description

When I quit while still playing something (both with RC and Qt4 interfaces):

LibVLC fatal error locking mutex in thread 2969369488 at ../../src/audio_output/input.c:517: 22
 Error message: Invalid argument
Aborted

Change History

05/25/08 11:25:11 changed by courmisch

With valgrind:

==32204==
==32204== Thread 11:
==32204== Invalid read of size 4
==32204==    at 0x4248160: pthread_mutex_lock (pthread_mutex_lock.c:51)
==32204==    by 0x41DB5B5: pthread_mutex_lock (forward.c:182)
==32204==    by 0x40A84EC: ??? (vlc_threads.h:202)
==32204==    by 0x40A508E: ??? (dec.c:385)
==32204==    by 0x406FAFE: ??? (decoder.c:647)
==32204==    by 0x4073144: ??? (decoder.c:887)
==32204==    by 0x4073EB0: ??? (decoder.c:593)
==32204==    by 0x4245FD2: start_thread (pthread_create.c:297)
==32204==    by 0x41CFB8D: clone (in /usr/lib/debug/libc-2.7.so)
==32204==  Address 0x5c95018 is 200 bytes inside a block of size 488 free'd
==32204==    at 0x402265C: free (vg_replace_malloc.c:323)
==32204==    by 0x40DCD78: __vlc_object_release (objects.c:393)
==32204==    by 0x40A468A: ??? (common.c:83)
==32204==    by 0x404EC4F: libvlc_InternalCleanup (libvlc-common.c:954)
==32204==    by 0x402BE76: libvlc_release (core.c:167)
==32204==    by 0x8048EC7: main (vlc.c:138)

Not reproducible under gdb.

05/28/08 19:36:22 changed by courmisch

This one is worked around by the removal of the aout keep feature. But it still affects the vout. And probably --sout-keep too.

05/31/08 18:48:06 changed by courmisch

  • summary changed from VLC audio output crash to VLC video output crash.

06/07/08 09:07:40 changed by courmisch

  • priority changed from high to normal.
  • owner changed.
  • component changed from Audio output core to LibVLC.

06/07/08 09:31:06 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

06/07/08 09:31:25 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

06/28/08 19:57:12 changed by courmisch

  • status changed from closed to reopened.
  • resolution deleted.

06/28/08 19:57:35 changed by courmisch

  • cc set to dionoea.

The fix has been reverted. Unsurprisingly the bug is back.

06/28/08 19:57:41 changed by courmisch

  • milestone changed from 0.9.0-TP to 0.9.0-test1.

06/28/08 21:23:14 changed by courmisch

  • status changed from reopened to closed.
  • resolution set to fixed.

06/28/08 21:32:20 changed by courmisch

  • status changed from closed to reopened.
  • resolution deleted.

06/28/08 21:32:28 changed by courmisch

  • component changed from LibVLC to Video output core.

06/28/08 21:34:37 changed by courmisch

The video output is utterly broken. As it stands, we have to choose between #1533 and #1637.

I give up.

06/28/08 21:35:09 changed by courmisch

  • cc deleted.

I meant #1593 (this one), of course.

06/28/08 21:54:58 changed by courmisch

  • status changed from reopened to closed.
  • resolution set to fixed.

Fixed by [8fa65a4d5895a0cf3e6567dcf1115189580a7439].

Now, you should sometime get "main interface warning: wants non-existing object" instead of a crash.